--- a/code/analysis/analysis_1/base1_ci.ipynb
+++ b/code/analysis/analysis_1/base1_ci.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "bd7f2b1f-13c4-44b1-ae99-21e610fbf6ef",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
     {
      "data": {
       "text/plain": [
-       "(2134, 14526)"
+       "(2133, 14494)"
       ]
      },
      "execution_count": 4,
@@ -95,8 +95,8 @@
     {
      "data": {
       "text/plain": [
-       "1.0    66.026242\n",
-       "0.0    33.973758\n",
+       "1.0    66.057196\n",
+       "0.0    33.942804\n",
        "Name: corrup_intensa, dtype: float64"
       ]
      },
@@ -119,7 +119,7 @@
      "data": {
       "text/plain": [
        "1.0    1409\n",
-       "0.0     725\n",
+       "0.0     724\n",
        "Name: corrup_intensa, dtype: int64"
       ]
      },
@@ -292,31 +292,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Original</th>\n",
-       "      <td>1600.0</td>\n",
-       "      <td>14519.0</td>\n",
-       "      <td>537.0</td>\n",
-       "      <td>1063.0</td>\n",
+       "      <td>1599.0</td>\n",
+       "      <td>14487.0</td>\n",
+       "      <td>531.0</td>\n",
+       "      <td>1068.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SMOTE</th>\n",
-       "      <td>2126.0</td>\n",
-       "      <td>14519.0</td>\n",
-       "      <td>1063.0</td>\n",
-       "      <td>1063.0</td>\n",
+       "      <td>2136.0</td>\n",
+       "      <td>14487.0</td>\n",
+       "      <td>1068.0</td>\n",
+       "      <td>1068.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SOMTE Tomek</th>\n",
-       "      <td>1966.0</td>\n",
-       "      <td>14519.0</td>\n",
-       "      <td>983.0</td>\n",
-       "      <td>983.0</td>\n",
+       "      <td>1912.0</td>\n",
+       "      <td>14487.0</td>\n",
+       "      <td>956.0</td>\n",
+       "      <td>956.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>NRS</th>\n",
-       "      <td>2126.0</td>\n",
-       "      <td>14519.0</td>\n",
-       "      <td>1063.0</td>\n",
-       "      <td>1063.0</td>\n",
+       "      <td>2136.0</td>\n",
+       "      <td>14487.0</td>\n",
+       "      <td>1068.0</td>\n",
+       "      <td>1068.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -324,10 +324,10 @@
       ],
       "text/plain": [
        "             observaciones  variables  Nro. No  Nro. Si\n",
-       "Original            1600.0    14519.0    537.0   1063.0\n",
-       "SMOTE               2126.0    14519.0   1063.0   1063.0\n",
-       "SOMTE Tomek         1966.0    14519.0    983.0    983.0\n",
-       "NRS                 2126.0    14519.0   1063.0   1063.0"
+       "Original            1599.0    14487.0    531.0   1068.0\n",
+       "SMOTE               2136.0    14487.0   1068.0   1068.0\n",
+       "SOMTE Tomek         1912.0    14487.0    956.0    956.0\n",
+       "NRS                 2136.0    14487.0   1068.0   1068.0"
       ]
      },
      "execution_count": 12,
@@ -372,9 +372,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2903.8\n",
-      "4355.7\n",
-      "5807.6\n"
+      "2897.4\n",
+      "4346.1\n",
+      "5794.8\n"
      ]
     }
    ],
@@ -419,7 +419,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 13 s\n"
+      "Wall time: 15.1 s\n"
      ]
     }
    ],
@@ -445,6 +445,52 @@
     "y_lg_pred_class_nrs = lg_model_nrs.predict( x_test )\n",
     "y_lg_pred_prob_nrs  = lg_model_nrs.predict_proba( x_test )[ :, 1 ]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "62204a67-a076-4755-8af4-ff5e912867c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          no       0.54      0.19      0.28       193\n",
+      "          si       0.67      0.91      0.77       341\n",
+      "\n",
+      "    accuracy                           0.65       534\n",
+      "   macro avg       0.60      0.55      0.53       534\n",
+      "weighted avg       0.62      0.65      0.59       534\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "columns             = [ 'no', 'si' ]\n",
+    "lg_report_o         = classification_report( y_test, y_lg_pred_class_o, target_names = columns )\n",
+    "print( lg_report_o )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80892601-52e6-46b2-b2dd-e7b2b02f36bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f1_score_lg_o       = f1_score( y_test, y_lg_pred_class_s, average = 'macro' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dabcb9d1-e599-4cbd-94ec-6c40b90423a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
