--- a/code/analysis/analysis_1/base0_ci.ipynb
+++ b/code/analysis/analysis_1/base0_ci.ipynb
@@ -482,7 +482,7 @@
     "accuracy_lg_o       = accuracy_score( y_test, y_lg_pred_class_o )\n",
     "log_loss_lg_o       = log_loss( y_test, y_lg_pred_class_o )\n",
     "roc_auc_lg_o        = roc_auc_score( y_test, y_lg_pred_prob_o )\n",
-    "f1_score_lg_o       = f1_score( y_test, y_lg_pred_class_s, average = 'binary' )\n",
+    "f1_score_lg_o       = f1_score( y_test, y_lg_pred_class_s, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE model\n",
     "lg_no_precision_s   = lg_report_s[ 'no' ][ 'precision' ]\n",
@@ -496,7 +496,7 @@
     "accuracy_lg_s       = accuracy_score( y_test, y_lg_pred_class_s )\n",
     "log_loss_lg_s       = log_loss( y_test, y_lg_pred_class_s )\n",
     "roc_auc_lg_s        = roc_auc_score( y_test, y_lg_pred_prob_s )\n",
-    "f1_score_lg_s       = f1_score( y_test, y_lg_pred_class_s, average = 'binary' )\n",
+    "f1_score_lg_s       = f1_score( y_test, y_lg_pred_class_s, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE Tomek model\n",
     "lg_no_precision_st  = lg_report_st[ 'no' ][ 'precision' ]\n",
@@ -510,7 +510,7 @@
     "accuracy_lg_st      = accuracy_score( y_test, y_lg_pred_class_st )\n",
     "log_loss_lg_st      = log_loss( y_test, y_lg_pred_class_st )\n",
     "roc_auc_lg_st       = roc_auc_score( y_test, y_lg_pred_prob_st )\n",
-    "f1_score_lg_st      = f1_score( y_test, y_lg_pred_class_st, average = 'binary' )\n",
+    "f1_score_lg_st      = f1_score( y_test, y_lg_pred_class_st, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the NRS model\n",
     "lg_no_precision_nrs = lg_report_st[ 'no' ][ 'precision' ]\n",
@@ -524,7 +524,7 @@
     "accuracy_lg_nrs     = accuracy_score( y_test, y_lg_pred_class_nrs )\n",
     "log_loss_lg_nrs     = log_loss( y_test, y_lg_pred_class_nrs )\n",
     "roc_auc_lg_nrs      = roc_auc_score( y_test, y_lg_pred_prob_nrs )\n",
-    "f1_score_lg_nrs     = f1_score( y_test, y_lg_pred_class_nrs, average = 'binary' )"
+    "f1_score_lg_nrs     = f1_score( y_test, y_lg_pred_class_nrs, average = 'macro' )"
    ]
   },
   {
@@ -626,7 +626,7 @@
     "accuracy_lasso_o       = accuracy_score( y_test, y_lasso_pred_class_o )\n",
     "log_loss_lasso_o       = log_loss( y_test, y_lasso_pred_class_o )\n",
     "roc_auc_lasso_o        = roc_auc_score( y_test, y_lasso_pred_prob_o )\n",
-    "f1_score_lasso_o       = f1_score( y_test, y_lasso_pred_class_o, average = 'binary' )\n",
+    "f1_score_lasso_o       = f1_score( y_test, y_lasso_pred_class_o, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE model\n",
     "lasso_no_precision_s   = lasso_report_s[ 'no' ][ 'precision' ]\n",
@@ -640,7 +640,7 @@
     "accuracy_lasso_s       = accuracy_score( y_test, y_lasso_pred_class_s )\n",
     "log_loss_lasso_s       = log_loss( y_test, y_lasso_pred_class_s )\n",
     "roc_auc_lasso_s        = roc_auc_score( y_test, y_lasso_pred_prob_s )\n",
-    "f1_score_lasso_s       = f1_score( y_test, y_lasso_pred_class_s, average = 'binary' )\n",
+    "f1_score_lasso_s       = f1_score( y_test, y_lasso_pred_class_s, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE Tomek model\n",
     "lasso_no_precision_st  = lasso_report_st[ 'no' ][ 'precision' ]\n",
@@ -654,7 +654,7 @@
     "accuracy_lasso_st      = accuracy_score( y_test, y_lasso_pred_class_st )\n",
     "log_loss_lasso_st      = log_loss( y_test, y_lasso_pred_class_st )\n",
     "roc_auc_lasso_st       = roc_auc_score( y_test, y_lasso_pred_prob_st )\n",
-    "f1_score_lasso_st      = f1_score( y_test, y_lasso_pred_class_st, average = 'binary' )\n",
+    "f1_score_lasso_st      = f1_score( y_test, y_lasso_pred_class_st, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the NRS model\n",
     "lasso_no_precision_nrs = lasso_report_nrs[ 'no' ][ 'precision' ]\n",
@@ -668,7 +668,7 @@
     "accuracy_lasso_nrs = accuracy_score( y_test, y_lasso_pred_class_nrs )\n",
     "log_loss_lasso_nrs = log_loss( y_test, y_lasso_pred_class_nrs )\n",
     "roc_auc_lasso_nrs = roc_auc_score( y_test, y_lasso_pred_prob_nrs )\n",
-    "f1_score_lasso_nrs = f1_score( y_test, y_lasso_pred_class_nrs, average = 'binary' )"
+    "f1_score_lasso_nrs = f1_score( y_test, y_lasso_pred_class_nrs, average = 'macro' )"
    ]
   },
   {
@@ -763,7 +763,7 @@
     "accuracy_ridge_o       = accuracy_score( y_test, y_ridge_pred_class_o )\n",
     "log_loss_ridge_o       = log_loss( y_test, y_ridge_pred_class_o )\n",
     "roc_auc_ridge_o        = roc_auc_score( y_test, y_ridge_pred_prob_o )\n",
-    "f1_score_ridge_o       = f1_score( y_test, y_ridge_pred_class_o, average = 'binary' )\n",
+    "f1_score_ridge_o       = f1_score( y_test, y_ridge_pred_class_o, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE model\n",
     "ridge_no_precision_s   = ridge_report_s[ 'no' ][ 'precision' ]\n",
@@ -777,7 +777,7 @@
     "accuracy_ridge_s       = accuracy_score( y_test, y_ridge_pred_class_s )\n",
     "log_loss_ridge_s       = log_loss( y_test, y_ridge_pred_class_s )\n",
     "roc_auc_ridge_s        = roc_auc_score( y_test, y_ridge_pred_prob_s )\n",
-    "f1_score_ridge_s       = f1_score( y_test, y_ridge_pred_class_s, average = 'binary' )\n",
+    "f1_score_ridge_s       = f1_score( y_test, y_ridge_pred_class_s, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE Tomek model\n",
     "ridge_no_precision_st  = ridge_report_st[ 'no' ][ 'precision' ]\n",
@@ -791,7 +791,7 @@
     "accuracy_ridge_st      = accuracy_score( y_test, y_ridge_pred_class_st )\n",
     "log_loss_ridge_st      = log_loss( y_test, y_ridge_pred_class_st )\n",
     "roc_auc_ridge_st       = roc_auc_score( y_test, y_ridge_pred_prob_st )\n",
-    "f1_score_ridge_st      = f1_score( y_test, y_ridge_pred_class_st, average = 'binary' )\n",
+    "f1_score_ridge_st      = f1_score( y_test, y_ridge_pred_class_st, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the NRS model\n",
     "ridge_no_precision_nrs = ridge_report_nrs[ 'no' ][ 'precision' ]\n",
@@ -805,7 +805,7 @@
     "accuracy_ridge_nrs     = accuracy_score( y_test, y_ridge_pred_class_nrs )\n",
     "log_loss_ridge_nrs     = log_loss( y_test, y_ridge_pred_class_nrs )\n",
     "roc_auc_ridge_nrs      = roc_auc_score( y_test, y_ridge_pred_prob_nrs )\n",
-    "f1_score_ridge_nrs     = f1_score( y_test, y_ridge_pred_class_nrs, average = 'binary' )"
+    "f1_score_ridge_nrs     = f1_score( y_test, y_ridge_pred_class_nrs, average = 'macro' )"
    ]
   },
   {
@@ -887,7 +887,7 @@
     "accuracy_elasticnet_o       = accuracy_score( y_test, y_elasticnet_pred_class_o )\n",
     "log_loss_elasticnet_o       = log_loss( y_test, y_elasticnet_pred_class_o )\n",
     "roc_auc_elasticnet_o        = roc_auc_score( y_test, y_elasticnet_pred_prob_o )\n",
-    "f1_score_elasticnet_o       = f1_score( y_test, y_elasticnet_pred_class_o, average = 'binary' )\n",
+    "f1_score_elasticnet_o       = f1_score( y_test, y_elasticnet_pred_class_o, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE model\n",
     "elasticnet_no_precision_s   = elasticnet_report_s[ 'no' ][ 'precision' ]\n",
@@ -901,7 +901,7 @@
     "accuracy_elasticnet_s       = accuracy_score( y_test, y_elasticnet_pred_class_s )\n",
     "log_loss_elasticnet_s       = log_loss( y_test, y_elasticnet_pred_class_s )\n",
     "roc_auc_elasticnet_s        = roc_auc_score( y_test, y_elasticnet_pred_prob_s )\n",
-    "f1_score_elasticnet_s       = f1_score( y_test, y_elasticnet_pred_class_s, average = 'binary' )\n",
+    "f1_score_elasticnet_s       = f1_score( y_test, y_elasticnet_pred_class_s, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE Tomek model\n",
     "elasticnet_no_precision_st  = elasticnet_report_st[ 'no' ][ 'precision' ]\n",
@@ -915,7 +915,7 @@
     "accuracy_elasticnet_st      = accuracy_score( y_test, y_elasticnet_pred_class_st )\n",
     "log_loss_elasticnet_st      = log_loss( y_test, y_elasticnet_pred_class_st )\n",
     "roc_auc_elasticnet_st       = roc_auc_score( y_test, y_elasticnet_pred_prob_st )\n",
-    "f1_score_elasticnet_st      = f1_score( y_test, y_elasticnet_pred_class_st, average = 'binary' )\n",
+    "f1_score_elasticnet_st      = f1_score( y_test, y_elasticnet_pred_class_st, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the NRS model\n",
     "elasticnet_no_precision_nrs = elasticnet_report_nrs[ 'no' ][ 'precision' ]\n",
@@ -929,7 +929,7 @@
     "accuracy_elasticnet_nrs     = accuracy_score( y_test, y_elasticnet_pred_class_nrs )\n",
     "log_loss_elasticnet_nrs     = log_loss( y_test, y_elasticnet_pred_class_nrs )\n",
     "roc_auc_elasticnet_nrs      = roc_auc_score( y_test, y_elasticnet_pred_prob_nrs )\n",
-    "f1_score_elasticnet_nrs     = f1_score( y_test, y_elasticnet_pred_class_nrs, average = 'binary' )"
+    "f1_score_elasticnet_nrs     = f1_score( y_test, y_elasticnet_pred_class_nrs, average = 'macro' )"
    ]
   },
   {
@@ -1119,7 +1119,7 @@
     "accuracy_rf_o       = accuracy_score( y_test, y_rf_pred_class_o )\n",
     "log_loss_rf_o       = log_loss( y_test, y_rf_pred_class_o )\n",
     "roc_auc_rf_o        = roc_auc_score( y_test, y_rf_pred_prob_o )\n",
-    "f1_score_rf_o       = f1_score( y_test, y_rf_pred_class_o, average = 'binary' )\n",
+    "f1_score_rf_o       = f1_score( y_test, y_rf_pred_class_o, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE model\n",
     "rf_no_precision_s   = rf_report_s[ 'no' ][ 'precision' ]\n",
@@ -1133,7 +1133,7 @@
     "accuracy_rf_s       = accuracy_score( y_test, y_rf_pred_class_s )\n",
     "log_loss_rf_s       = log_loss( y_test, y_rf_pred_class_s )\n",
     "roc_auc_rf_s        = roc_auc_score( y_test, y_rf_pred_prob_s )\n",
-    "f1_score_rf_s       = f1_score( y_test, y_rf_pred_class_s, average = 'binary' )\n",
+    "f1_score_rf_s       = f1_score( y_test, y_rf_pred_class_s, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE Tomek model\n",
     "rf_no_precision_st  = rf_report_st[ 'no' ][ 'precision' ]\n",
@@ -1147,7 +1147,7 @@
     "accuracy_rf_st      = accuracy_score( y_test, y_rf_pred_class_st )\n",
     "log_loss_rf_st      = log_loss( y_test, y_rf_pred_class_st )\n",
     "roc_auc_rf_st       = roc_auc_score( y_test, y_rf_pred_prob_st )\n",
-    "f1_score_rf_st      = f1_score( y_test, y_rf_pred_class_st, average = 'binary' )\n",
+    "f1_score_rf_st      = f1_score( y_test, y_rf_pred_class_st, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the NRS model\n",
     "rf_no_precision_nrs = rf_report_nrs[ 'no' ][ 'precision' ]\n",
@@ -1161,7 +1161,7 @@
     "accuracy_rf_nrs     = accuracy_score( y_test, y_rf_pred_class_nrs )\n",
     "log_loss_rf_nrs     = log_loss( y_test, y_rf_pred_class_nrs )\n",
     "roc_auc_rf_nrs      = roc_auc_score( y_test, y_rf_pred_prob_nrs )\n",
-    "f1_score_rf_nrs     = f1_score( y_test, y_rf_pred_class_nrs, average = 'binary' )"
+    "f1_score_rf_nrs     = f1_score( y_test, y_rf_pred_class_nrs, average = 'macro' )"
    ]
   },
   {
@@ -1365,7 +1365,7 @@
     "accuracy_xgb_o       = accuracy_score( y_test, y_xgb_pred_class_o )\n",
     "log_loss_xgb_o       = log_loss( y_test, y_xgb_pred_class_o )\n",
     "roc_auc_xgb_o        = roc_auc_score( y_test, y_xgb_pred_prob_o )\n",
-    "f1_score_xgb_o       = f1_score( y_test, y_xgb_pred_class_o, average = 'binary' )\n",
+    "f1_score_xgb_o       = f1_score( y_test, y_xgb_pred_class_o, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE model\n",
     "xgb_no_precision_s   = xgb_report_s[ 'no' ][ 'precision' ]\n",
@@ -1379,7 +1379,7 @@
     "accuracy_xgb_s       = accuracy_score( y_test, y_xgb_pred_class_s )\n",
     "log_loss_xgb_s       = log_loss( y_test, y_xgb_pred_class_s )\n",
     "roc_auc_xgb_s        = roc_auc_score( y_test, y_xgb_pred_prob_s )\n",
-    "f1_score_xgb_s       = f1_score( y_test, y_xgb_pred_class_s, average = 'binary' )\n",
+    "f1_score_xgb_s       = f1_score( y_test, y_xgb_pred_class_s, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE Tomek model\n",
     "xgb_no_precision_st  = xgb_report_st[ 'no' ][ 'precision' ]\n",
@@ -1393,7 +1393,7 @@
     "accuracy_xgb_st      = accuracy_score( y_test, y_xgb_pred_class_st )\n",
     "log_loss_xgb_st      = log_loss( y_test, y_xgb_pred_class_st )\n",
     "roc_auc_xgb_st       = roc_auc_score( y_test, y_xgb_pred_prob_st )\n",
-    "f1_score_xgb_st      = f1_score( y_test, y_xgb_pred_class_st, average = 'binary' )\n",
+    "f1_score_xgb_st      = f1_score( y_test, y_xgb_pred_class_st, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the NRS model\n",
     "xgb_no_precision_nrs = xgb_report_nrs[ 'no' ][ 'precision' ]\n",
@@ -1407,7 +1407,7 @@
     "accuracy_xgb_nrs     = accuracy_score( y_test, y_xgb_pred_class_nrs )\n",
     "log_loss_xgb_nrs     = log_loss( y_test, y_xgb_pred_class_nrs )\n",
     "roc_auc_xgb_nrs      = roc_auc_score( y_test, y_xgb_pred_prob_nrs )\n",
-    "f1_score_xgb_nrs     = f1_score( y_test, y_xgb_pred_class_nrs, average = 'binary' )"
+    "f1_score_xgb_nrs     = f1_score( y_test, y_xgb_pred_class_nrs, average = 'macro' )"
    ]
   },
   {
@@ -1660,7 +1660,7 @@
     "accuracy_rf_o_train       = accuracy_score( y_train, y_rf_pred_class_o_train )\n",
     "log_loss_rf_o_train       = log_loss( y_train, y_rf_pred_class_o_train )\n",
     "roc_auc_rf_o_train        = roc_auc_score( y_train, y_rf_pred_prob_o_train )\n",
-    "f1_score_rf_o_train       = f1_score( y_train, y_rf_pred_class_o_train, average = 'binary' )\n",
+    "f1_score_rf_o_train       = f1_score( y_train, y_rf_pred_class_o_train, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE model\n",
     "rf_no_precision_s_train   = rf_report_s[ 'no' ][ 'precision' ]\n",
@@ -1674,7 +1674,7 @@
     "accuracy_rf_s_train       = accuracy_score( y_train, y_rf_pred_class_s_train )\n",
     "log_loss_rf_s_train       = log_loss( y_train, y_rf_pred_class_s_train )\n",
     "roc_auc_rf_s_train        = roc_auc_score( y_train, y_rf_pred_prob_s_train )\n",
-    "f1_score_rf_s_train       = f1_score( y_train, y_rf_pred_class_s_train, average = 'binary' )\n",
+    "f1_score_rf_s_train       = f1_score( y_train, y_rf_pred_class_s_train, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE Tomek model\n",
     "rf_no_precision_st_train  = rf_report_st[ 'no' ][ 'precision' ]\n",
@@ -1688,7 +1688,7 @@
     "accuracy_rf_st_train      = accuracy_score( y_train, y_rf_pred_class_st_train )\n",
     "log_loss_rf_st_train      = log_loss( y_train, y_rf_pred_class_st_train )\n",
     "roc_auc_rf_st_train       = roc_auc_score( y_train, y_rf_pred_prob_st_train )\n",
-    "f1_score_rf_st_train      = f1_score( y_train, y_rf_pred_class_st_train, average = 'binary' )\n",
+    "f1_score_rf_st_train      = f1_score( y_train, y_rf_pred_class_st_train, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the NRS model\n",
     "rf_no_precision_nrs_train = rf_report_nrs[ 'no' ][ 'precision' ]\n",
@@ -1702,7 +1702,7 @@
     "accuracy_rf_nrs_train     = accuracy_score( y_train, y_rf_pred_class_nrs_train )\n",
     "log_loss_rf_nrs_train     = log_loss( y_train, y_rf_pred_class_nrs_train )\n",
     "roc_auc_rf_nrs_train      = roc_auc_score( y_train, y_rf_pred_prob_nrs_train )\n",
-    "f1_score_rf_nrs_train     = f1_score( y_train, y_rf_pred_class_nrs_train, average = 'binary' )"
+    "f1_score_rf_nrs_train     = f1_score( y_train, y_rf_pred_class_nrs_train, average = 'macro' )"
    ]
   },
   {
@@ -1752,7 +1752,7 @@
     "accuracy_xgb_o_train       = accuracy_score( y_train, y_xgb_pred_class_o_train )\n",
     "log_loss_xgb_o_train       = log_loss( y_train, y_xgb_pred_class_o_train )\n",
     "roc_auc_xgb_o_train        = roc_auc_score( y_train, y_xgb_pred_prob_o_train )\n",
-    "f1_score_xgb_o_train       = f1_score( y_train, y_xgb_pred_class_o_train, average = 'binary' )\n",
+    "f1_score_xgb_o_train       = f1_score( y_train, y_xgb_pred_class_o_train, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE model\n",
     "xgb_no_precision_s_train   = xgb_report_s[ 'no' ][ 'precision' ]\n",
@@ -1766,7 +1766,7 @@
     "accuracy_xgb_s_train       = accuracy_score( y_train, y_xgb_pred_class_s_train )\n",
     "log_loss_xgb_s_train       = log_loss( y_train, y_xgb_pred_class_s_train )\n",
     "roc_auc_xgb_s_train        = roc_auc_score( y_train, y_xgb_pred_prob_s_train )\n",
-    "f1_score_xgb_s_train       = f1_score( y_train, y_xgb_pred_class_s_train, average = 'binary' )\n",
+    "f1_score_xgb_s_train       = f1_score( y_train, y_xgb_pred_class_s_train, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE Tomek model\n",
     "xgb_no_precision_st_train  = xgb_report_st[ 'no' ][ 'precision' ]\n",
@@ -1780,7 +1780,7 @@
     "accuracy_xgb_st_train      = accuracy_score( y_train, y_xgb_pred_class_st_train )\n",
     "log_loss_xgb_st_train      = log_loss( y_train, y_xgb_pred_class_st_train )\n",
     "roc_auc_xgb_st_train       = roc_auc_score( y_train, y_xgb_pred_prob_st_train )\n",
-    "f1_score_xgb_st_train      = f1_score( y_train, y_xgb_pred_class_st_train, average = 'binary' )\n",
+    "f1_score_xgb_st_train      = f1_score( y_train, y_xgb_pred_class_st_train, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the NRS model\n",
     "xgb_no_precision_nrs_train = xgb_report_nrs[ 'no' ][ 'precision' ]\n",
@@ -1794,7 +1794,7 @@
     "accuracy_xgb_nrs_train     = accuracy_score( y_train, y_xgb_pred_class_nrs_train )\n",
     "log_loss_xgb_nrs_train     = log_loss( y_train, y_xgb_pred_class_nrs_train )\n",
     "roc_auc_xgb_nrs_train      = roc_auc_score( y_train, y_xgb_pred_prob_nrs_train )\n",
-    "f1_score_xgb_nrs_train     = f1_score( y_train, y_xgb_pred_class_nrs_train, average = 'binary' )"
+    "f1_score_xgb_nrs_train     = f1_score( y_train, y_xgb_pred_class_nrs_train, average = 'macro' )"
    ]
   },
   {
