--- a/code/analysis/analysis_1/base1_ci.ipynb
+++ b/code/analysis/analysis_1/base1_ci.ipynb
@@ -518,7 +518,7 @@
     "accuracy_lg_o       = accuracy_score( y_test, y_lg_pred_class_o )\n",
     "log_loss_lg_o       = log_loss( y_test, y_lg_pred_class_o )\n",
     "roc_auc_lg_o        = roc_auc_score( y_test, y_lg_pred_prob_o )\n",
-    "f1_score_lg_o       = f1_score( y_test, y_lg_pred_class_s, average = 'binary' )\n",
+    "f1_score_lg_o       = f1_score( y_test, y_lg_pred_class_s, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE model\n",
     "lg_no_precision_s   = lg_report_s[ 'no' ][ 'precision' ]\n",
@@ -532,7 +532,7 @@
     "accuracy_lg_s       = accuracy_score( y_test, y_lg_pred_class_s )\n",
     "log_loss_lg_s       = log_loss( y_test, y_lg_pred_class_s )\n",
     "roc_auc_lg_s        = roc_auc_score( y_test, y_lg_pred_prob_s )\n",
-    "f1_score_lg_s       = f1_score( y_test, y_lg_pred_class_s, average = 'binary' )\n",
+    "f1_score_lg_s       = f1_score( y_test, y_lg_pred_class_s, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE Tomek model\n",
     "lg_no_precision_st  = lg_report_st[ 'no' ][ 'precision' ]\n",
@@ -546,7 +546,7 @@
     "accuracy_lg_st      = accuracy_score( y_test, y_lg_pred_class_st )\n",
     "log_loss_lg_st      = log_loss( y_test, y_lg_pred_class_st )\n",
     "roc_auc_lg_st       = roc_auc_score( y_test, y_lg_pred_prob_st )\n",
-    "f1_score_lg_st      = f1_score( y_test, y_lg_pred_class_st, average = 'binary' )\n",
+    "f1_score_lg_st      = f1_score( y_test, y_lg_pred_class_st, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the NRS model\n",
     "lg_no_precision_nrs = lg_report_st[ 'no' ][ 'precision' ]\n",
@@ -560,7 +560,7 @@
     "accuracy_lg_nrs     = accuracy_score( y_test, y_lg_pred_class_nrs )\n",
     "log_loss_lg_nrs     = log_loss( y_test, y_lg_pred_class_nrs )\n",
     "roc_auc_lg_nrs      = roc_auc_score( y_test, y_lg_pred_prob_nrs )\n",
-    "f1_score_lg_nrs     = f1_score( y_test, y_lg_pred_class_nrs, average = 'binary' )"
+    "f1_score_lg_nrs     = f1_score( y_test, y_lg_pred_class_nrs, average = 'macro' )"
    ]
   },
   {
@@ -662,7 +662,7 @@
     "accuracy_lasso_o       = accuracy_score( y_test, y_lasso_pred_class_o )\n",
     "log_loss_lasso_o       = log_loss( y_test, y_lasso_pred_class_o )\n",
     "roc_auc_lasso_o        = roc_auc_score( y_test, y_lasso_pred_prob_o )\n",
-    "f1_score_lasso_o       = f1_score( y_test, y_lasso_pred_class_o, average = 'binary' )\n",
+    "f1_score_lasso_o       = f1_score( y_test, y_lasso_pred_class_o, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE model\n",
     "lasso_no_precision_s   = lasso_report_s[ 'no' ][ 'precision' ]\n",
@@ -676,7 +676,7 @@
     "accuracy_lasso_s       = accuracy_score( y_test, y_lasso_pred_class_s )\n",
     "log_loss_lasso_s       = log_loss( y_test, y_lasso_pred_class_s )\n",
     "roc_auc_lasso_s        = roc_auc_score( y_test, y_lasso_pred_prob_s )\n",
-    "f1_score_lasso_s       = f1_score( y_test, y_lasso_pred_class_s, average = 'binary' )\n",
+    "f1_score_lasso_s       = f1_score( y_test, y_lasso_pred_class_s, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE Tomek model\n",
     "lasso_no_precision_st  = lasso_report_st[ 'no' ][ 'precision' ]\n",
@@ -690,7 +690,7 @@
     "accuracy_lasso_st      = accuracy_score( y_test, y_lasso_pred_class_st )\n",
     "log_loss_lasso_st      = log_loss( y_test, y_lasso_pred_class_st )\n",
     "roc_auc_lasso_st       = roc_auc_score( y_test, y_lasso_pred_prob_st )\n",
-    "f1_score_lasso_st      = f1_score( y_test, y_lasso_pred_class_st, average = 'binary' )\n",
+    "f1_score_lasso_st      = f1_score( y_test, y_lasso_pred_class_st, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the NRS model\n",
     "lasso_no_precision_nrs = lasso_report_nrs[ 'no' ][ 'precision' ]\n",
@@ -704,7 +704,7 @@
     "accuracy_lasso_nrs     = accuracy_score( y_test, y_lasso_pred_class_nrs )\n",
     "log_loss_lasso_nrs     = log_loss( y_test, y_lasso_pred_class_nrs )\n",
     "roc_auc_lasso_nrs      = roc_auc_score( y_test, y_lasso_pred_prob_nrs )\n",
-    "f1_score_lasso_nrs     = f1_score( y_test, y_lasso_pred_class_nrs, average = 'binary' )"
+    "f1_score_lasso_nrs     = f1_score( y_test, y_lasso_pred_class_nrs, average = 'macro' )"
    ]
   },
   {
@@ -799,7 +799,7 @@
     "accuracy_ridge_o       = accuracy_score( y_test, y_ridge_pred_class_o )\n",
     "log_loss_ridge_o       = log_loss( y_test, y_ridge_pred_class_o )\n",
     "roc_auc_ridge_o        = roc_auc_score( y_test, y_ridge_pred_prob_o )\n",
-    "f1_score_ridge_o       = f1_score( y_test, y_ridge_pred_class_o, average = 'binary' )\n",
+    "f1_score_ridge_o       = f1_score( y_test, y_ridge_pred_class_o, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE model\n",
     "ridge_no_precision_s   = ridge_report_s[ 'no' ][ 'precision' ]\n",
@@ -813,7 +813,7 @@
     "accuracy_ridge_s       = accuracy_score( y_test, y_ridge_pred_class_s )\n",
     "log_loss_ridge_s       = log_loss( y_test, y_ridge_pred_class_s )\n",
     "roc_auc_ridge_s        = roc_auc_score( y_test, y_ridge_pred_prob_s )\n",
-    "f1_score_ridge_s       = f1_score( y_test, y_ridge_pred_class_s, average = 'binary' )\n",
+    "f1_score_ridge_s       = f1_score( y_test, y_ridge_pred_class_s, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE Tomek model\n",
     "ridge_no_precision_st  = ridge_report_st[ 'no' ][ 'precision' ]\n",
@@ -827,7 +827,7 @@
     "accuracy_ridge_st      = accuracy_score( y_test, y_ridge_pred_class_st )\n",
     "log_loss_ridge_st      = log_loss( y_test, y_ridge_pred_class_st )\n",
     "roc_auc_ridge_st       = roc_auc_score( y_test, y_ridge_pred_prob_st )\n",
-    "f1_score_ridge_st      = f1_score( y_test, y_ridge_pred_class_st, average = 'binary' )\n",
+    "f1_score_ridge_st      = f1_score( y_test, y_ridge_pred_class_st, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the NRS model\n",
     "ridge_no_precision_nrs = ridge_report_nrs[ 'no' ][ 'precision' ]\n",
@@ -841,7 +841,7 @@
     "accuracy_ridge_nrs     = accuracy_score( y_test, y_ridge_pred_class_nrs )\n",
     "log_loss_ridge_nrs     = log_loss( y_test, y_ridge_pred_class_nrs )\n",
     "roc_auc_ridge_nrs      = roc_auc_score( y_test, y_ridge_pred_prob_nrs )\n",
-    "f1_score_ridge_nrs     = f1_score( y_test, y_ridge_pred_class_nrs, average = 'binary' )"
+    "f1_score_ridge_nrs     = f1_score( y_test, y_ridge_pred_class_nrs, average = 'macro' )"
    ]
   },
   {
@@ -923,7 +923,7 @@
     "accuracy_elasticnet_o       = accuracy_score( y_test, y_elasticnet_pred_class_o )\n",
     "log_loss_elasticnet_o       = log_loss( y_test, y_elasticnet_pred_class_o )\n",
     "roc_auc_elasticnet_o        = roc_auc_score( y_test, y_elasticnet_pred_prob_o )\n",
-    "f1_score_elasticnet_o       = f1_score( y_test, y_elasticnet_pred_class_o, average = 'binary' )\n",
+    "f1_score_elasticnet_o       = f1_score( y_test, y_elasticnet_pred_class_o, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE model\n",
     "elasticnet_no_precision_s   = elasticnet_report_s[ 'no' ][ 'precision' ]\n",
@@ -937,7 +937,7 @@
     "accuracy_elasticnet_s       = accuracy_score( y_test, y_elasticnet_pred_class_s )\n",
     "log_loss_elasticnet_s       = log_loss( y_test, y_elasticnet_pred_class_s )\n",
     "roc_auc_elasticnet_s        = roc_auc_score( y_test, y_elasticnet_pred_prob_s )\n",
-    "f1_score_elasticnet_s       = f1_score( y_test, y_elasticnet_pred_class_s, average = 'binary' )\n",
+    "f1_score_elasticnet_s       = f1_score( y_test, y_elasticnet_pred_class_s, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE Tomek model\n",
     "elasticnet_no_precision_st  = elasticnet_report_st[ 'no' ][ 'precision' ]\n",
@@ -951,7 +951,7 @@
     "accuracy_elasticnet_st      = accuracy_score( y_test, y_elasticnet_pred_class_st )\n",
     "log_loss_elasticnet_st      = log_loss( y_test, y_elasticnet_pred_class_st )\n",
     "roc_auc_elasticnet_st       = roc_auc_score( y_test, y_elasticnet_pred_prob_st )\n",
-    "f1_score_elasticnet_st      = f1_score( y_test, y_elasticnet_pred_class_st, average = 'binary' )\n",
+    "f1_score_elasticnet_st      = f1_score( y_test, y_elasticnet_pred_class_st, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the NRS model\n",
     "elasticnet_no_precision_nrs = elasticnet_report_nrs[ 'no' ][ 'precision' ]\n",
@@ -965,7 +965,7 @@
     "accuracy_elasticnet_nrs     = accuracy_score( y_test, y_elasticnet_pred_class_nrs )\n",
     "log_loss_elasticnet_nrs     = log_loss( y_test, y_elasticnet_pred_class_nrs )\n",
     "roc_auc_elasticnet_nrs      = roc_auc_score( y_test, y_elasticnet_pred_prob_nrs )\n",
-    "f1_score_elasticnet_nrs     = f1_score( y_test, y_elasticnet_pred_class_nrs, average = 'binary' )"
+    "f1_score_elasticnet_nrs     = f1_score( y_test, y_elasticnet_pred_class_nrs, average = 'macro' )"
    ]
   },
   {
@@ -1147,7 +1147,7 @@
     "accuracy_rf_o       = accuracy_score( y_test, y_rf_pred_class_o )\n",
     "log_loss_rf_o       = log_loss( y_test, y_rf_pred_class_o )\n",
     "roc_auc_rf_o        = roc_auc_score( y_test, y_rf_pred_prob_o )\n",
-    "f1_score_rf_o       = f1_score( y_test, y_rf_pred_class_o, average = 'binary' )\n",
+    "f1_score_rf_o       = f1_score( y_test, y_rf_pred_class_o, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE model\n",
     "rf_no_precision_s   = rf_report_s[ 'no' ][ 'precision' ]\n",
@@ -1161,7 +1161,7 @@
     "accuracy_rf_s       = accuracy_score( y_test, y_rf_pred_class_s )\n",
     "log_loss_rf_s       = log_loss( y_test, y_rf_pred_class_s )\n",
     "roc_auc_rf_s        = roc_auc_score( y_test, y_rf_pred_prob_s )\n",
-    "f1_score_rf_s       = f1_score( y_test, y_rf_pred_class_s, average = 'binary' )\n",
+    "f1_score_rf_s       = f1_score( y_test, y_rf_pred_class_s, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE Tomek model\n",
     "rf_no_precision_st  = rf_report_st[ 'no' ][ 'precision' ]\n",
@@ -1175,7 +1175,7 @@
     "accuracy_rf_st      = accuracy_score( y_test, y_rf_pred_class_st )\n",
     "log_loss_rf_st      = log_loss( y_test, y_rf_pred_class_st )\n",
     "roc_auc_rf_st       = roc_auc_score( y_test, y_rf_pred_prob_st )\n",
-    "f1_score_rf_st      = f1_score( y_test, y_rf_pred_class_st, average = 'binary' )\n",
+    "f1_score_rf_st      = f1_score( y_test, y_rf_pred_class_st, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the NRS model\n",
     "rf_no_precision_nrs = rf_report_nrs[ 'no' ][ 'precision' ]\n",
@@ -1189,7 +1189,7 @@
     "accuracy_rf_nrs     = accuracy_score( y_test, y_rf_pred_class_nrs )\n",
     "log_loss_rf_nrs     = log_loss( y_test, y_rf_pred_class_nrs )\n",
     "roc_auc_rf_nrs      = roc_auc_score( y_test, y_rf_pred_prob_nrs )\n",
-    "f1_score_rf_nrs     = f1_score( y_test, y_rf_pred_class_nrs, average = 'binary' )"
+    "f1_score_rf_nrs     = f1_score( y_test, y_rf_pred_class_nrs, average = 'macro' )"
    ]
   },
   {
@@ -1393,7 +1393,7 @@
     "accuracy_xgb_o       = accuracy_score( y_test, y_xgb_pred_class_o )\n",
     "log_loss_xgb_o       = log_loss( y_test, y_xgb_pred_class_o )\n",
     "roc_auc_xgb_o        = roc_auc_score( y_test, y_xgb_pred_prob_o )\n",
-    "f1_score_xgb_o       = f1_score( y_test, y_xgb_pred_class_o, average = 'binary' )\n",
+    "f1_score_xgb_o       = f1_score( y_test, y_xgb_pred_class_o, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE model\n",
     "xgb_no_precision_s   = xgb_report_s[ 'no' ][ 'precision' ]\n",
@@ -1407,7 +1407,7 @@
     "accuracy_xgb_s       = accuracy_score( y_test, y_xgb_pred_class_s )\n",
     "log_loss_xgb_s       = log_loss( y_test, y_xgb_pred_class_s )\n",
     "roc_auc_xgb_s        = roc_auc_score( y_test, y_xgb_pred_prob_s )\n",
-    "f1_score_xgb_s       = f1_score( y_test, y_xgb_pred_class_s, average = 'binary' )\n",
+    "f1_score_xgb_s       = f1_score( y_test, y_xgb_pred_class_s, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE Tomek model\n",
     "xgb_no_precision_st  = xgb_report_st[ 'no' ][ 'precision' ]\n",
@@ -1421,7 +1421,7 @@
     "accuracy_xgb_st      = accuracy_score( y_test, y_xgb_pred_class_st )\n",
     "log_loss_xgb_st      = log_loss( y_test, y_xgb_pred_class_st )\n",
     "roc_auc_xgb_st       = roc_auc_score( y_test, y_xgb_pred_prob_st )\n",
-    "f1_score_xgb_st      = f1_score( y_test, y_xgb_pred_class_st, average = 'binary' )\n",
+    "f1_score_xgb_st      = f1_score( y_test, y_xgb_pred_class_st, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the NRS model\n",
     "xgb_no_precision_nrs = xgb_report_nrs[ 'no' ][ 'precision' ]\n",
@@ -1435,7 +1435,7 @@
     "accuracy_xgb_nrs     = accuracy_score( y_test, y_xgb_pred_class_nrs )\n",
     "log_loss_xgb_nrs     = log_loss( y_test, y_xgb_pred_class_nrs )\n",
     "roc_auc_xgb_nrs      = roc_auc_score( y_test, y_xgb_pred_prob_nrs )\n",
-    "f1_score_xgb_nrs     = f1_score( y_test, y_xgb_pred_class_nrs, average = 'binary' )"
+    "f1_score_xgb_nrs     = f1_score( y_test, y_xgb_pred_class_nrs, average = 'macro' )"
    ]
   },
   {
@@ -2105,7 +2105,7 @@
     "accuracy_rf_o_train       = accuracy_score( y_train, y_rf_pred_class_o_train )\n",
     "log_loss_rf_o_train       = log_loss( y_train, y_rf_pred_class_o_train )\n",
     "roc_auc_rf_o_train        = roc_auc_score( y_train, y_rf_pred_prob_o_train )\n",
-    "f1_score_rf_o_train       = f1_score( y_train, y_rf_pred_class_o_train, average = 'binary' )\n",
+    "f1_score_rf_o_train       = f1_score( y_train, y_rf_pred_class_o_train, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE model\n",
     "rf_no_precision_s_train   = rf_report_s[ 'no' ][ 'precision' ]\n",
@@ -2119,7 +2119,7 @@
     "accuracy_rf_s_train       = accuracy_score( y_train, y_rf_pred_class_s_train )\n",
     "log_loss_rf_s_train       = log_loss( y_train, y_rf_pred_class_s_train )\n",
     "roc_auc_rf_s_train        = roc_auc_score( y_train, y_rf_pred_prob_s_train )\n",
-    "f1_score_rf_s_train       = f1_score( y_train, y_rf_pred_class_s_train, average = 'binary' )\n",
+    "f1_score_rf_s_train       = f1_score( y_train, y_rf_pred_class_s_train, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE Tomek model\n",
     "rf_no_precision_st_train  = rf_report_st[ 'no' ][ 'precision' ]\n",
@@ -2133,7 +2133,7 @@
     "accuracy_rf_st_train      = accuracy_score( y_train, y_rf_pred_class_st_train )\n",
     "log_loss_rf_st_train      = log_loss( y_train, y_rf_pred_class_st_train )\n",
     "roc_auc_rf_st_train       = roc_auc_score( y_train, y_rf_pred_prob_st_train )\n",
-    "f1_score_rf_st_train      = f1_score( y_train, y_rf_pred_class_st_train, average = 'binary' )\n",
+    "f1_score_rf_st_train      = f1_score( y_train, y_rf_pred_class_st_train, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the NRS model\n",
     "rf_no_precision_nrs_train = rf_report_nrs[ 'no' ][ 'precision' ]\n",
@@ -2147,7 +2147,7 @@
     "accuracy_rf_nrs_train     = accuracy_score( y_train, y_rf_pred_class_nrs_train )\n",
     "log_loss_rf_nrs_train     = log_loss( y_train, y_rf_pred_class_nrs_train )\n",
     "roc_auc_rf_nrs_train      = roc_auc_score( y_train, y_rf_pred_prob_nrs_train )\n",
-    "f1_score_rf_nrs_train     = f1_score( y_train, y_rf_pred_class_nrs_train, average = 'binary' )"
+    "f1_score_rf_nrs_train     = f1_score( y_train, y_rf_pred_class_nrs_train, average = 'macro' )"
    ]
   },
   {
@@ -2197,7 +2197,7 @@
     "accuracy_xgb_o_train       = accuracy_score( y_train, y_xgb_pred_class_o_train )\n",
     "log_loss_xgb_o_train       = log_loss( y_train, y_xgb_pred_class_o_train )\n",
     "roc_auc_xgb_o_train        = roc_auc_score( y_train, y_xgb_pred_prob_o_train )\n",
-    "f1_score_xgb_o_train       = f1_score( y_train, y_xgb_pred_class_o_train, average = 'binary' )\n",
+    "f1_score_xgb_o_train       = f1_score( y_train, y_xgb_pred_class_o_train, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE model\n",
     "xgb_no_precision_s_train   = xgb_report_s[ 'no' ][ 'precision' ]\n",
@@ -2211,7 +2211,7 @@
     "accuracy_xgb_s_train       = accuracy_score( y_train, y_xgb_pred_class_s_train )\n",
     "log_loss_xgb_s_train       = log_loss( y_train, y_xgb_pred_class_s_train )\n",
     "roc_auc_xgb_s_train        = roc_auc_score( y_train, y_xgb_pred_prob_s_train )\n",
-    "f1_score_xgb_s_train       = f1_score( y_train, y_xgb_pred_class_s_train, average = 'binary' )\n",
+    "f1_score_xgb_s_train       = f1_score( y_train, y_xgb_pred_class_s_train, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the SMOTE Tomek model\n",
     "xgb_no_precision_st_train  = xgb_report_st[ 'no' ][ 'precision' ]\n",
@@ -2225,7 +2225,7 @@
     "accuracy_xgb_st_train      = accuracy_score( y_train, y_xgb_pred_class_st_train )\n",
     "log_loss_xgb_st_train      = log_loss( y_train, y_xgb_pred_class_st_train )\n",
     "roc_auc_xgb_st_train       = roc_auc_score( y_train, y_xgb_pred_prob_st_train )\n",
-    "f1_score_xgb_st_train      = f1_score( y_train, y_xgb_pred_class_st_train, average = 'binary' )\n",
+    "f1_score_xgb_st_train      = f1_score( y_train, y_xgb_pred_class_st_train, average = 'macro' )\n",
     "\n",
     "# Calculating metrics for the NRS model\n",
     "xgb_no_precision_nrs_train = xgb_report_nrs[ 'no' ][ 'precision' ]\n",
@@ -2239,7 +2239,7 @@
     "accuracy_xgb_nrs_train     = accuracy_score( y_train, y_xgb_pred_class_nrs_train )\n",
     "log_loss_xgb_nrs_train     = log_loss( y_train, y_xgb_pred_class_nrs_train )\n",
     "roc_auc_xgb_nrs_train      = roc_auc_score( y_train, y_xgb_pred_prob_nrs_train )\n",
-    "f1_score_xgb_nrs_train     = f1_score( y_train, y_xgb_pred_class_nrs_train, average = 'binary' )"
+    "f1_score_xgb_nrs_train     = f1_score( y_train, y_xgb_pred_class_nrs_train, average = 'macro' )"
    ]
   },
   {
