--- a/code/analysis/analysis_1/base1_ci.ipynb
+++ b/code/analysis/analysis_1/base1_ci.ipynb
@@ -1060,16 +1060,20 @@
     "\n",
     "# Select best params (Comentado)\n",
     "rf_max_features_o   = rf_search_o.best_params_[ 'max_features' ] \n",
-    "rf_n_estimators_o   = rf_search_o.best_params_[ 'n_estimators' ] \n",
+    "rf_n_estimators_o   = rf_search_o.best_params_[ 'n_estimators' ]\n",
+    "rf_max_depth_o      = rf_search_o.best_params_[ 'max_depth' ] \n",
     "\n",
     "rf_max_features_s   = rf_search_s.best_params_[ 'max_features' ] \n",
-    "rf_n_estimators_s   = rf_search_s.best_params_[ 'n_estimators' ] \n",
+    "rf_n_estimators_s   = rf_search_s.best_params_[ 'n_estimators' ]\n",
+    "rf_max_depth_s      = rf_search_s.best_params_[ 'max_depth' ] \n",
     "\n",
     "rf_max_features_st  = rf_search_st.best_params_[ 'max_features' ] \n",
     "rf_n_estimators_st  = rf_search_st.best_params_[ 'n_estimators' ] \n",
+    "rf_max_depth_st     = rf_search_st.best_params_[ 'max_depth' ] \n",
     "\n",
     "rf_max_features_nrs = rf_search_nrs.best_params_[ 'max_features' ] \n",
-    "rf_n_estimators_nrs = rf_search_nrs.best_params_[ 'n_estimators' ]"
+    "rf_n_estimators_nrs = rf_search_nrs.best_params_[ 'n_estimators' ]\n",
+    "rf_max_depth_nrs    = rf_search_nrs.best_params_[ 'max_depth' ] "
    ]
   },
   {
@@ -1084,21 +1088,25 @@
     "# Train the optimal models\n",
     "rf_optimal_model_o = RandomForestClassifier( max_features = rf_max_features_o, \n",
     "                                             n_estimators = rf_n_estimators_o,\n",
+    "                                             max_depth    = rf_max_depth_o,                                             \n",
     "                                             random_state = 2023,\n",
     "                                             n_jobs = -1 )\n",
     "\n",
     "rf_optimal_model_s = RandomForestClassifier( max_features = rf_max_features_s, \n",
     "                                             n_estimators = rf_n_estimators_s,\n",
+    "                                             max_depth    = rf_n_estimators_s,                                               \n",
     "                                             random_state = 2023,\n",
     "                                             n_jobs = -1 )\n",
     "\n",
     "rf_optimal_model_st = RandomForestClassifier( max_features = rf_max_features_st, \n",
     "                                              n_estimators = rf_n_estimators_st,\n",
+    "                                              max_depth    = rf_n_estimators_st,\n",
     "                                              random_state = 2023,\n",
     "                                              n_jobs = -1 )\n",
     "\n",
     "rf_optimal_model_nrs = RandomForestClassifier( max_features = rf_max_features_nrs, \n",
     "                                               n_estimators = rf_n_estimators_nrs,\n",
+    "                                               max_depth    = rf_n_estimators_nrs,\n",
     "                                               random_state = 2023,\n",
     "                                               n_jobs = -1 )\n",
     "\n",
