--- a/code/analysis/analysis_1/base0_ci.ipynb
+++ b/code/analysis/analysis_1/base0_ci.ipynb
@@ -31,9 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "41b347cf-1513-4fc9-880c-a0bef2a8a709",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import warnings\n",
@@ -42,9 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "bd7f2b1f-13c4-44b1-ae99-21e610fbf6ef",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import pandas as  pd\n",
@@ -56,9 +60,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "d031ebd0-f647-4e9f-be1d-5ee2284b029d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "path = r'..\\..\\..\\input\\preprocessed_data\\base0.csv'\n",
@@ -67,9 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "2343315f-7352-4d46-a0aa-7207c86053ac",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -77,7 +85,7 @@
        "(1382, 14510)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,9 +96,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "c6d51e4d-52e9-4d0e-90da-2fdc93f105fd",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -100,7 +110,7 @@
        "Name: corrup_intensa, dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,9 +121,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "69010e50",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -123,7 +135,7 @@
        "Name: corrup_intensa, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,9 +146,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "007ce411-429f-484a-9501-557730bf4857",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# data = data.drop( 'variable_gasto', axis = 1 )"
@@ -152,9 +166,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "6dbc5c9a-e77a-4cc4-8d98-39f363556638",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split"
@@ -162,9 +178,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "d6187f08-6f18-4b10-bf07-46285888b4e4",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "dep_var    = [ 'corrup_intensa' ]\n",
@@ -178,6 +196,43 @@
     "                                                     data[ 'corrup_intensa' ], \n",
     "                                                     test_size    = 0.25,\n",
     "                                                     random_state = 2023 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "4268f759-244c-4191-a48b-6f70d26292f9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1036, 14503)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "139ec63c-b65e-4e4d-a93b-c5ea6433f563",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "x_train_columns = x_train.columns.to_list()\n",
+    "x_train_columns = pd.DataFrame( x_train_columns, columns = [ 'colname' ] )\n",
+    "x_train_columns.to_excel( r'..\\..\\..\\code\\prediction\\colnames.xlsx' )"
    ]
   },
   {
@@ -2957,7 +3012,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
