--- a/code/prediction/preprocess_pred.ipynb
+++ b/code/prediction/preprocess_pred.ipynb
@@ -73,7 +73,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\dell\\\\Documents\\\\GitHub\\\\Corruption_Paper\\\\code\\\\data\\\\preprocess_data'"
+       "'C:\\\\Users\\\\dell\\\\Documents\\\\GitHub\\\\Corruption_Paper\\\\code\\\\prediction'"
       ]
      },
      "execution_count": 3,
@@ -87,13 +87,418 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "c36ff79f-c74c-499c-86d2-9c8fd77ad18a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = r'..\\..\\..\\input\\built_data\\*.dta'"
+    "path = r'..\\..\\input\\prediction_data\\*.dta'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5b9da81e-69b8-4773-932c-c80ebf70df3e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "CPU times: total: 14min 44s\n",
+      "Wall time: 14min 58s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "dfs = fun.importar_bases( path )\n",
+    "for i, df in enumerate( dfs ):\n",
+    "    print( i )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "028355e5-c664-4b3b-954f-875b506c8d84",
+   "metadata": {},
+   "source": [
+    "#### 1.3. Última limpieza a las bases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27ae56e0-44ea-4586-a0a7-87e0b00e518d",
+   "metadata": {},
+   "source": [
+    "Últimas modificaciones a las bases de datos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3d9726b3-a3e8-4313-bd27-7f86d98ee6b7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 2min 49s\n",
+      "Wall time: 2min 52s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "for i, df in enumerate( dfs ):\n",
+    "    data_cols = [ col for col in dfs[ i ].columns if col not in vn.no_predictoras_variables and col not in vn.string_variables ]\n",
+    "    encode_variables = { \"sexo\":{ \"Mujer\":1, \"Hombre\":2 }}\n",
+    "    dfs[ i ] = dfs[ i ][ data_cols ]\n",
+    "    dfs[ i ] = dfs[ i ].replace( encode_variables )\n",
+    "    dfs[ i ] = dfs[ i ].astype( str ).replace( '', np.nan, regex = True )\n",
+    "    dfs[ i ] = dfs[ i ].astype( str ).replace( '\\.+$', np.nan, regex = True ).astype( float )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "eeebcfcd-a9b1-4563-896b-9ca300ea53cc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "dfs[ 0 ].name = 'base0'\n",
+    "dfs[ 1 ].name = 'base1'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6236cb73-9f9e-4b35-be83-3ed2fb0120d4",
+   "metadata": {},
+   "source": [
+    "## 2. Preprocesamiento"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d7f83f5-e74a-4b53-8a5e-66a813e7ab9b",
+   "metadata": {},
+   "source": [
+    "### 2.1 Imputación con 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8385bc9d-37db-44de-86b4-5faf15cddcbb",
+   "metadata": {},
+   "source": [
+    "Se imputa los valores perdidos de las variables de SIAF con 0. No se generan variables dummy de control."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c531520b-8020-44e0-937b-421a86eecb05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, df in enumerate( dfs ):\n",
+    "    dfs[ i ] = fun.imputar_i( dfs[ i ], vn.siaf_variables, 0, dummy = False )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecc79f81-7e98-46e1-bded-d0ca0e745b79",
+   "metadata": {},
+   "source": [
+    "Se verifica que las variables pertenecientes a SIAF no tengan valores perdidos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "400f6b8f-a652-4cce-892c-33dbb2e9d6a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "df0_siaf = fun.listar_variables( dfs[ 0 ], df = \"siaf\" )\n",
+    "df1_siaf = fun.listar_variables( dfs[ 1 ], df = \"siaf\" )\n",
+    "\n",
+    "print( dfs[ 0 ][ df0_siaf ].isnull().sum().sum(),\n",
+    "       dfs[ 1 ][ df1_siaf ].isnull().sum().sum(), sep = \"\\n\" )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24e54105-ca3c-440c-860a-97982ad2a1d6",
+   "metadata": {},
+   "source": [
+    "### 2.2 Mantener solo las variables del conjunto de entrenamiento"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ad34439-ae26-46df-b44f-d5ca41c0a8c7",
+   "metadata": {},
+   "source": [
+    "Se mantienen solo las variables del conjunto de entrenamiento con el que fueron entrenados los modelos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4e071d8f-f5cf-4001-956a-f77da6605abe",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def filtro_vars( dataframe, path ):\n",
+    "    \n",
+    "    df_modificada = dataframe.copy()\n",
+    "    \n",
+    "    vars_total    = pd.read_excel( path )\n",
+    "    vars_total    = vars_total[ 'colname' ].tolist()\n",
+    "    vars_quedarse = [ var for var in dataframe.columns if var in vars_total ]\n",
+    "    \n",
+    "    df_modificada = df_modificada[ vars_quedarse ]\n",
+    "    \n",
+    "    return df_modificada    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d29545ca-4318-49d7-8a71-ffe1fc877437",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "base0 (1874, 18273)\n",
+      "base1 (1876, 18273)\n"
+     ]
+    }
+   ],
+   "source": [
+    "fun.determinar_dimensiones( dfs )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e65cfc77-15e5-4413-92b9-bec844fc163d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "path = r'..\\..\\code\\prediction\\colnames.xlsx'\n",
+    "\n",
+    "for i, df in enumerate( dfs ):\n",
+    "    dfs[ i ] = fun.filtro_vars( df, path )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "18c4b290-6f5f-46ae-94d1-cd33715c9a2e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "dfs[ 0 ].name = 'base0'\n",
+    "dfs[ 1 ].name = 'base1'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "19836f09-4d6e-47bd-a871-c76eacfdf41b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "base0 (1874, 14502)\n",
+      "base1 (1876, 14502)\n"
+     ]
+    }
+   ],
+   "source": [
+    "fun.determinar_dimensiones( dfs )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0c0973d-f18f-44d7-b4c3-e339f4b32319",
+   "metadata": {},
+   "source": [
+    "### 2.3. Imputación con media y con moda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8daee782-3c53-442b-87e6-ce7f74a4631e",
+   "metadata": {},
+   "source": [
+    "Se imputa las variables pertenecientes a Renamu. Las variables numéricas se imputan con media, y las variables categóricas con moda."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "dfc96bad-a9da-402c-af4b-f9bbef065185",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, df in enumerate( dfs ):\n",
+    "    dfs[ i ] = fun.imputar_ii( dfs[ i ], vn.renamu_numvars, num = True, dummy = False )\n",
+    "    dfs[ i ] = fun.imputar_ii( dfs[ i ], vn.renamu_catvars, num = False, dummy = False )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be890548-266d-4c58-9d68-3f240773be0d",
+   "metadata": {},
+   "source": [
+    "Se verifica que las variables pertenecientes a Renamu ya no tengan valores perdidos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "05ebc175-7f88-4ef5-ae15-0bb7a4a079e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "df0_renamu = fun.listar_variables( dfs[ 0 ], df = \"renamu\" )\n",
+    "df1_renamu = fun.listar_variables( dfs[ 1 ], df = \"renamu\" )\n",
+    "\n",
+    "print( dfs[ 0 ][ df0_renamu ].isnull().sum().sum(),\n",
+    "       dfs[ 1 ][ df1_renamu ].isnull().sum().sum(), sep = \"\\n\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "f6dadbad-dfeb-4e43-9f6b-e8a0e2e66327",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "192"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfs[ 0 ].isnull().sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80f85385-8913-403e-87bb-b30b7d4a0d04",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6242c18-eae1-4907-b06e-3b5bf2f250fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c82b124e-9f67-419a-a2aa-7b750d3b4497",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9c8a666-32d9-4602-b4d5-d58335081a77",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73c9a932-c42b-4547-9ee7-8630e90ed243",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23d4813a-77ce-4271-8115-9f3f93d62db7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f190242-8ec9-4565-b383-034a2a8a2ebd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30b40582-91d0-4e33-b2b6-0024ce1a2107",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
