--- a/code/analysis/analysis_5/base0_ca.ipynb
+++ b/code/analysis/analysis_5/base0_ca.ipynb
@@ -5,7 +5,7 @@
    "id": "c16703ef-3ce1-4fb4-a5f4-9c50c26157c7",
    "metadata": {},
    "source": [
-    "# BASE 0 - CI"
+    "# BASE 0 - CA"
    ]
   },
   {
@@ -16,7 +16,7 @@
     "Information:\n",
     "\n",
     "* Database: base 0\n",
-    "* Predicted variable: Corrupción Intensa\n",
+    "* Predicted variable: Corrupción Amplia\n",
     "* Type of prediction: Clasification\n",
     "* Periodo: 2016-2020"
    ]
@@ -126,9 +126,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dep_var    = [ 'corrup_intensa' ]\n",
+    "dep_var    = [ 'corrup_amplia' ]\n",
     "other_vars = [ 'monto_examinado', 'monto_auditado', 'monto_objeto_servicio', \n",
-    "               'monto_corrup1', 'monto_corrup2', 'tipo_control', 'corrup_amplia',\n",
+    "               'monto_corrup1', 'monto_corrup2', 'tipo_control', 'corrup_intensa',\n",
     "               'per_corrup1', 'per_corrup2', '_monto', 'monto_', 'year', 'ubigeo' ]\n",
     "\n",
     "pred_vars  = [ col for col in data.columns if col not in dep_var and col not in other_vars ]\n",
@@ -148,7 +148,7 @@
    "source": [
     "x_train_columns = x_train.columns.to_list()\n",
     "x_train_columns = pd.DataFrame( x_train_columns, columns = [ 'colname' ] )\n",
-    "x_train_columns.to_excel( r'..\\..\\..\\code\\prediction\\colnames_b0_ci.xlsx' )"
+    "x_train_columns.to_excel( r'..\\..\\..\\code\\prediction\\colnames_b0_ca.xlsx' )"
    ]
   },
   {
@@ -264,37 +264,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "8e917d46-940f-4154-b6b0-a0857c65295d",
+   "execution_count": null,
+   "id": "fa177cd1-cb95-491c-858b-c30c2d2d5fc5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sufix = 'ci'"
+    "sufix = 'ca'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "af00f4cd-bd52-4fbd-9a8d-ec981d83325d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "stat: path should be string, bytes, os.PathLike or integer, not float",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_12068\\3364993877.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mresultados\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfun\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtest_models_classification\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0msufix\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx_train_list\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train_list\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpath_list\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mresultados\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_excel\u001b[0m\u001b[1;33m(\u001b[0m \u001b[1;34mr'..\\..\\..\\output\\ejecucion_5\\results\\base0\\base0_ci.xlsx'\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Documents\\Josue\\GitHub\\Corruption_Paper\\code\\modules\\funciones.py\u001b[0m in \u001b[0;36mtest_models_classification\u001b[1;34m(models, x_train_list, y_train_list, x_test, y_test, path_list, sufix)\u001b[0m\n\u001b[0;32m    674\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    675\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mpath\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mpath_list\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 676\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mpath\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    677\u001b[0m             \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mpath\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    678\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\genericpath.py\u001b[0m in \u001b[0;36mexists\u001b[1;34m(path)\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[1;34m\"\"\"Test whether a path exists.  Returns False for broken symbolic links\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m         \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m     \u001b[1;32mexcept\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mOSError\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: stat: path should be string, bytes, os.PathLike or integer, not float"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "resultados = fun.test_models_classification( sufix, models, x_train_list, y_train_list, x_test, y_test, path_list )\n",
-    "resultados.to_excel( r'..\\..\\..\\output\\ejecucion_5\\results\\base0\\base0_ci.xlsx' )"
+    "resultados.to_excel( r'..\\..\\..\\output\\ejecucion_5\\results\\base0\\base0_ca.xlax' )"
    ]
   }
  ],
