--- a/code/prediction/prediction.ipynb
+++ b/code/prediction/prediction.ipynb
@@ -48,28 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "9306fec3-7bd0-4b0a-94ee-3ccad0fd7639",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "path = r'..\\..\\input\\prediction_data\\base0_ci\\preprocessed_data\\base0_2016.csv'\n",
-    "data = pd.read_csv( path )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fb09f8cd-134f-4db0-b441-0b05be68c7bf",
-   "metadata": {},
-   "source": [
-    "## 2. Hacer predicciones"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "b4d0553e-7695-4802-8f68-d6414426b4c7",
    "metadata": {
     "tags": []
@@ -86,8 +65,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fb09f8cd-134f-4db0-b441-0b05be68c7bf",
+   "metadata": {},
+   "source": [
+    "## 2. Hacer predicciones"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "d7ee7e49-21a3-455e-924e-818aada51997",
    "metadata": {
     "tags": []
@@ -99,27 +86,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "99a086a7-5028-4f51-ab28-53872be21937",
    "metadata": {},
    "outputs": [],
    "source": [
     "for i, df in enumerate( dfs ):\n",
     "    \n",
-    "    ubigeo_column                    = dfs[ i ][ 'ubigeo' ].copy()\n",
-    "    year_column                      = dfs[ i ][ 'year' ].copy()\n",
-    "    dfs[ i ]                         = dfs[ i ].drop( [ 'ubigeo', 'year' ], axis = 1 )\n",
+    "    ubigeo_column                       = dfs[ i ][ 'ubigeo' ].copy()\n",
+    "    year_column                         = dfs[ i ][ 'year' ].copy()\n",
+    "    dfs[ i ]                            = dfs[ i ].drop( [ 'ubigeo', 'year' ], axis = 1 )\n",
     "    \n",
-    "    y_pred_class_o                   = optimal_model.predict( dfs[ i ] )\n",
-    "    y_pred_prob_o                    = optimal_model.predict_proba( dfs[ i ] )[ :, 1 ]  \n",
-    "    dfs[ i ][ 'prob_ci' ]            = y_pred_prob_o\n",
-    "    dfs[ i ][ 'class_default_ci' ]   = y_pred_class_o\n",
-    "    dfs[ i ][ 'prob_calculated_ci' ] = dfs[ i ][ 'prob_ci' ].apply( lambda x: 1 if x > 0.5 else 0 )\n",
+    "    y_pred_class_o                       = optimal_model.predict( dfs[ i ] )\n",
+    "    y_pred_prob_o                        = optimal_model.predict_proba( dfs[ i ] )[ :, 1 ]  \n",
+    "    dfs[ i ][ 'prob_ci' ]                = y_pred_prob_o\n",
+    "    dfs[ i ][ 'class_ci_default' ]       = y_pred_class_o\n",
+    "    dfs[ i ][ 'class_ci_calculated_50' ] = dfs[ i ][ 'prob_ci' ].apply( lambda x: 1 if x > 0.5 else 0 )\n",
+    "    dfs[ i ][ 'class_ci_calculated_60' ] = dfs[ i ][ 'prob_ci' ].apply( lambda x: 1 if x > 0.6 else 0 )\n",
+    "    dfs[ i ][ 'class_ci_100' ]           = ( dfs[ i ][ 'prob_ci' ].rank( ascending = False, method = 'first' ) <= 100 ).astype( int )\n",
     "    \n",
-    "    dfs[ i ][ 'ubigeo' ]             = ubigeo_column\n",
-    "    dfs[ i ][ 'year' ]               = year_column\n",
+    "    dfs[ i ][ 'ubigeo' ]                = ubigeo_column\n",
+    "    dfs[ i ][ 'year' ]                  = year_column\n",
     "    \n",
-    "    dfs[ i ]                         = dfs[ i ][ [ 'ubigeo', 'year', 'prob_ci', 'class_default_ci', 'prob_calculated_ci' ] ]"
+    "    dfs[ i ]                            = dfs[ i ][ [ 'ubigeo', 'year', 'prob_ci', 'class_ci_default', \n",
+    "                                                      'class_ci_calculated_50', 'class_ci_calculated_60',\n",
+    "                                                      'class_ci_100' ] ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8a147f3f-5b54-4f45-9905-57dc84c75536",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "complete_base = pd.concat( dfs, axis = 0 )"
    ]
   },
   {
@@ -132,7 +135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
+   "id": "2c8dcbde-88ed-45a9-a58a-015bb0d06524",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "complete_base.to_csv( r'..\\..\\input\\prediction_data\\base0_ci\\predicted_data\\base0_complete.csv', index = False )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "965da1a0-bd95-4cde-8060-71ddb6519113",
    "metadata": {},
    "outputs": [],
