update - base ca

--- a/code/analysis/analysis_5/base0_ca.ipynb
+++ b/code/analysis/analysis_5/base0_ca.ipynb
@@ -91,7 +91,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "368bf546-d90c-43fa-826e-f60fb5044c0a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "fun = SourceFileLoader( 'funciones', r'..\\..\\..\\code\\modules\\funciones.py' ).load_module()\n",
@@ -134,7 +136,7 @@
     "pred_vars  = [ col for col in data.columns if col not in dep_var and col not in other_vars ]\n",
     "\n",
     "x_train, x_test, y_train, y_test = train_test_split( data[ pred_vars ], \n",
-    "                                                     data[ 'corrup_intensa' ], \n",
+    "                                                     data[ 'corrup_amplia' ], \n",
     "                                                     test_size    = 0.3,\n",
     "                                                     random_state = 2023 )"
    ]
@@ -264,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "fa177cd1-cb95-491c-858b-c30c2d2d5fc5",
    "metadata": {},
    "outputs": [],
@@ -274,13 +276,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "af00f4cd-bd52-4fbd-9a8d-ec981d83325d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "resultados = fun.test_models_classification( sufix, models, x_train_list, y_train_list, x_test, y_test, path_list )\n",
-    "resultados.to_excel( r'..\\..\\..\\output\\ejecucion_5\\results\\base0\\base0_ca.xlax' )"
+    "resultados = fun.test_models_classification( models, x_train_list, y_train_list, x_test, y_test, path_list, sufix )\n",
+    "resultados.to_excel( r'..\\..\\..\\output\\ejecucion_5\\results\\base0\\base0_ca.xlsx' )"
    ]
   }
  ],
