update only siaf

--- a/code/analysis/analysis_5/plots.ipynb
+++ b/code/analysis/analysis_5/plots.ipynb
@@ -107,12 +107,20 @@
    },
    "outputs": [],
    "source": [
-    "most_important_vars = [ '_tejgtotfun_f5r08pgrcopc', '_tejgfun_f5r08ct05pgrcopc', '_tejgtotfun_f5pgrco', \n",
+    "most_important_vars_ci = [ '_tejgtotfun_f5r08pgrcopc', '_tejgfun_f5r08ct05pgrcopc', '_tejgtotfun_f5pgrco', \n",
     "                        '_tejgfun_f5ct05pgrco', 'dfgpimpiafun_f5ct06pgrco', 'dfgpimpiafun_f5r18ct06pgrco',\n",
     "                        '_tejgge_r09ct05biser', '_tejgtotfun_f2opseg', '_devppimtotfun_f2transpc',\n",
     "                        '_devppimfun_f1ct05opseg', '_tejgtotfun_f5amb', 'compu_muni_5', 'devppimtotfun_f5r07trans',\n",
     "                        '_tejgft_rdet', 'devppimtotfun_f5r07transpc', '_pimgfun_f5r18ct06opseg', '_tejgge_r08ct05biserpc',\n",
     "                        '_tejgfun_f2ct05opseg', 'dfgpimpiage_r08ct05dotrapc', '_tejgfun_f5ct06ambpc' ]\n",
+    "\n",
+    "most_important_vars_ca = [ '_tejgtotfun_f5r08pgrcopc', '_tejgfun_f5r08ct05pgrcopc', '_tejgtotfun_f5pgrco', \n",
+    "                        '_tejgfun_f5ct05pgrco', 'dfgpimpiafun_f5ct06pgrco', 'dfgpimpiafun_f5r18ct06pgrco',\n",
+    "                        '_tejgge_r09ct05biser', '_tejgtotfun_f2opseg', '_devppimtotfun_f2transpc',\n",
+    "                        '_devppimfun_f1ct05opseg', '_tejgtotfun_f5amb', 'compu_muni_5', 'devppimtotfun_f5r07trans',\n",
+    "                        '_tejgft_rdet', 'devppimtotfun_f5r07transpc', '_pimgfun_f5r18ct06opseg', '_tejgge_r08ct05biserpc',\n",
+    "                        '_tejgfun_f2ct05opseg', 'dfgpimpiage_r08ct05dotrapc', '_tejgfun_f5ct06ambpc' ]\n",
+    "\n",
     "\n",
     "canon_vars          = [ 'Canon: Total devengado', 'Canon: Total devengado rezagado', 'Canon: Total devengado per cápita', \n",
     "                        'Canon: Total ejecutado', 'Canon: Total ejecutado rezagado', 'Canon: Total ejecutado per cápita',\n",
